--- a/app/Resources/views/order/checkout.html.twig
+++ b/app/Resources/views/order/checkout.html.twig
@@ -37,10 +37,10 @@
                 <script
                   src="https://checkout.stripe.com/checkout.js" class="stripe-button"
                   data-key="pk_test_189g9J2eZvKYlo2CIDZ2DAhh"
-                  data-amount="999"
+                  data-amount="{{ cart.total * 100 }}"
                   data-name="Demo Site"
                   data-description="2 widgets"
-                  data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+                  data-image="{{ asset('images/logo.png') }}"
                   data-locale="auto">
                 </script>
               </form>
