--- a/app/Resources/views/order/checkout.html.twig
+++ b/app/Resources/views/order/checkout.html.twig
@@ -1,6 +1,16 @@
 {% extends 'base.html.twig' %}
 {% block title %}SSC Checkout{% endblock %}
 
+{% block javascripts %}
+  {{ parent }}
+  
+  <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+  
+  <script type="text/javascript">
+    Stripe.setPublishableKey('{{ stripe_public_key }}');
+  </script>
+{% endblock %}
+
 {% block body %}
 <div class="nav-space-checkout">
   <div class="container">
