--- a/app/Resources/views/order/checkout.html.twig
+++ b/app/Resources/views/order/checkout.html.twig
@@ -2,7 +2,7 @@
 {% block title %}SSC Checkout{% endblock %}
 
 {% block javascripts %}
-  {{ parent }}
+  {{ parent() }}
   
   <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
   
@@ -43,17 +43,7 @@
         </table>
       </div>
       <div class="col-xs-12 col-sm-6">
-        <form action="" method="POST">
-          <script
-            src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-            data-key="{{ stripe_public_key }}"
-            data-amount="{{ cart.total * 100 }}"
-            data-name="Demo Site"
-            data-description="2 widgets"
-            data-image="{{ asset('images/logo.png') }}"
-            data-locale="auto">
-          </script>
-        </form>
+        {{ include('order/_cardForm.html.twig') }}
       </div>
     </div>
   </div>
